# claude_smart_tools

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  TODO.md  pyproject.toml  requirements-dev.txt  requirements.txt
docs/: tool_template.md
examples/: example_tool_usage.py  text_analyzer_usage.py
scripts/: install_ai_upscaling.py
src/claude_tools/: __init__.py  cli.py
src/claude_tools/core/: __init__.py  base_tool.py
src/claude_tools/tools/: __init__.py  example_tool.py  image_upscaler.py  text_analyzer.py
src/claude_tools/utils/: __init__.py  logging.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py
tests/unit/: __init__.py  test_base_tool.py  test_image_upscaler.py  test_text_analyzer.py
